--- a/.github/workflows/reset_reservations.yml
+++ b/.github/workflows/reset_reservations.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install PostgreSQL client
         run: sudo apt-get update && sudo apt-get install -y postgresql-client --no-install-recommends
 
-      - sname: Clear Reservations Table
+      - name: Clear Reservations Table
         env:
           # IMPORTANT: Set this secret in your GitHub repo settings:
           # Settings -> Secrets and variables -> Actions -> Repository secrets -> New repository secret
