--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ pytz>=2023.3 # For timezone handling
 pandas>=1.5.0 # For displaying dataframes
 plotly>=5.0.0 # For analytics charts and visualization
 openpyxl>=3.0.0 # For reading Excel files
+requests>=2.31.0 # For API calls
 supabase
