--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ pandas>=1.5.0 # For displaying dataframes
 plotly>=5.0.0 # For analytics charts and visualization
 openpyxl>=3.0.0 # For reading Excel files
 requests>=2.31.0 # For API calls
+urllib3>=1.26.0 # For advanced HTTP features (retry logic)
 supabase
